--- a/config/locales/views/user_mailer/en.yml
+++ b/config/locales/views/user_mailer/en.yml
@@ -1,7 +1,12 @@
 en:
-  user_mailler:
+  user_mailer:
     account_activation:
       title: "Sample App"
       hi: "Hi"
       welcome: "Welcome to the Sample App! Click on the link below to activate your account:"
       active: "Activate"
+    password_reset:
+      title: "Password reset"
+      to_reset_text: "To reset your password click the link below"
+      this_link_text: "This link will expire in two hours."
+      notify_text: "If you did not request your password to be reset, please ignore this     email and your password will stay as it is."
