--- a/config/locales/views/static_pages/en.yml
+++ b/config/locales/views/static_pages/en.yml
@@ -17,6 +17,13 @@ en:
       link_2: "To get help on this sample app, see the %{url_2}"
       title_link2: "Ruby on Rails Tutorial book"
     home:
-      title: "Sample App"
-      link: "This is the home page for the %{url} sample application."
-      title_link: "Ruby on Rails Tutorial"
+      welcome: "Welcome to the Sample App"
+      rails_tutorial: "This is the home page for the
+      <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a>
+      sample application."
+      sign_up: "Sign up now!"
+      rails_logo: "Rails logo"
+    contact:
+      title: "Contact"
+      link: "Contact the Ruby on Rails Tutorial about the sample app at the
+      <a href='http://www.railstutorial.org/contact'>contact page</a>."
