--- a/config/locales/views/static_pages/en.yml
+++ b/config/locales/views/static_pages/en.yml
@@ -1,15 +1,24 @@
 en:
   static_pages:
-    about:
-      title: "About"
-      link_1: "The <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a>"
-      link_2: "is a <a href='http://www.railstutorial.org/book'>book</a> and"
-      link_3: "<a href='http://screencasts.railstutorial.org/'>screencast series</a> to teach web development with"
-      link_4: "<a href='http://rubyonrails.org/'>Ruby on Rails</a>. This is the sample application for the tutorial."
-    help:
-      title: "Help"
-      link_1: "Get help on the Ruby on Rails Tutorial at the <a href='http://www.railstutorial.org/help'>Rails Tutorial help section</a>"
-      link_2: "To get help on this sample app, see the <a href='http://www.railstutorial.org/book'>Ruby on Rails Tutorial book</a>"
     home:
       title: "Sample App"
-      link: "This is the home page for the <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a> sample application."
+      text: "This is home page for the"
+      rail_title: "Ruby on Rails Tutorial"
+      sample_app: "sample application"
+    about:
+      title: "About"
+      the: "The"
+      ror_tut: "Ruby on Rails Tutorial"
+      is_a: "is a"
+      book: "book"
+      _and: "and"
+      screencast: "screencast series"
+      text: "to teach web development with"
+      ror_title: "Ruby on Rails"
+      sample_text: "This is the sample application for the tutorial"
+    help:
+      title: "Help"
+      text_1: "Get help on the Ruby on Rails Tutorial at the"
+      rail_section: "Rails Tutorial help section"
+      text_2: "To get help on this sample app, see the"
+      rails_book: "Ruby on Rails Tutorial book"
