--- a/config/locales/views/static_pages/en.yml
+++ b/config/locales/views/static_pages/en.yml
@@ -19,12 +19,12 @@ en:
       rail_book: "Ruby on Rails Tutorial book"
     home:
       welcome: "Welcome to the Sample App"
-      rails_tutorial: "This is the home page for the
-      <a href='http://www.railstutorial.org/'>Ruby on Rails Tutorial</a>
-      sample application."
+      text: "This is the home page for the "
+      text_title_link: "Ruby on Rails Tutorial"
+      sample_text: "sample application"
       sign_up: "Sign up now!"
       rails_logo: "Rails logo"
     contact:
       title: "Contact"
-      link: "Contact the Ruby on Rails Tutorial about the sample app at the
-      <a href='http://www.railstutorial.org/contact'>contact page</a>."
+      text: "Contact the Ruby on Rails Tutorial about the sample app at the "
+      text_title: "contact page"
